# EpidemicAreaManagementSystem

./: .gitignore  CMakeLists.txt  README.md  build.sh.backup  database.md  后台指南.md
Backend/: backendREADME.md
Backend/code/: CMakeLists.txt
Backend/code/server/: main.cc
Backend/socketli/server/: CMakeLists.txt
cpp-httplib-master/: .travis.yml
server/: CMakeLists.txt  MsgPraser.cc  MsgPraser.h  ReleaseQuarantine.sh  StateDailyRecord.sh  common.h  genJson.cpp  genJson.h  helpFunc.cpp  httplib.cc  interface.h  main.cc  monitor.sh  myDB.cc  myDB.cpp  myDB.h
server/FuncInterface/: CMakeLists.txt  Quarantine.cc  announcement.cc  equipment.cc  familyManagement.cc  login+register.cc  physicalCondition.cc
